# ball-plate

./: .env  .gitignore  Cargo.toml  README.MD  docs.md
src/: app.rs  camera.rs  main.rs  pid.rs  usb.rs  utils.rs
src/utils/: ball.rs  computing.rs  draw.rs  graph.rs  mod.rs  plot.rs  point.rs
