[package]
name = "HH-ball-plate"
version = "0.1.0"
edition = "2024"

[dependencies]
nokhwa = { version = "0.10.10", features = ["input-native"]}
opencv = { version = "0.98.1", default-features = false, features = ["clang-runtime", "imgproc", 'imgcodecs'] }
easy_color = "0.1.13"
dotenv = "0.15.0"
winit = { version = "0.30.13", default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }
softbuffer = "0.4.8"
tokio = { version = "1.52.3", features = ["sync", "rt", "rt-multi-thread", "macros"] }
serialport = "4.9.0"
cprint = { version = "1.0.0", features = ["cprint", "ceprint"]}

[features]
arduino-less = []
no-feedback = []